--- a/cards/card-20211126-055659-sbDZuM.yaml
+++ b/cards/card-20211126-055659-sbDZuM.yaml
@@ -1,13 +1,13 @@
 ---
 title: U.S. Wartime Presidents
 items:
-  - Madison
-  - Polk
-  - Lincoln
-  - Wilson
-  - Roosevelt
-  - Truman
-  - Eisenhower
-  - Kennedy
+  - James Madison
+  - James Polk
+  - Abraham Lincoln
+  - Woodrow Wilson
+  - Franklin D. Roosevelt
+  - Harry Truman
+  - Dwight D. Eisenhower
+  - John F. Kennedy
   - George W. Bush
   - George H.W. Bush
