Specify cut-off year.

--- a/cards/card-20220505-043341-MUM9A5.yaml
+++ b/cards/card-20220505-043341-MUM9A5.yaml
@@ -1,5 +1,5 @@
 ---
-title: Countries with Most Olympic Games Hosted
+title: Countries with Most Olympic Games Hosted (2022)
 items:
   - United States
   - France
